--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+.moviePic {
+      height: 400px;
+      width: auto;
+      opacity: 0.8;
+    }
+
+    .movieDetail {
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      text-align: center;
+      font-size: 24px;
+    }
